# ideanance

./: .env.example  CONTRIBUTING.md  IDEANANCE.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/evals/: eval_citations.py  eval_governance.py  eval_lenses.py
backend/src/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/src/api/: __init__.py
backend/src/core/: events.py  logging.py  model_catalog.py  protocols.py  sse.py
backend/src/ideanance/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/src/models/: __init__.py  base.py
backend/tests/: conftest.py  fakes.py
backend/tests/e2e/: test_analytics_loop.py  test_full_loop.py  test_lens_evaluation.py  test_multi_framework_loop.py  test_template_loop.py
backend/tests/evals/: test_boundary.py  test_citation_fidelity.py  test_conflict_detection_eval.py  test_eu_ai_act_accuracy.py  test_governance_accuracy.py  test_retrieval_quality.py
backend/tests/test_agents/: conftest.py  test_base.py  test_domain_agents.py  test_eval_export_agents.py  test_governance_filter.py  test_model_registry.py  test_pipeline.py  test_resilience_wiring.py  test_topology_governance.py
backend/tests/test_analytics/: test_service.py
backend/tests/test_api/: test_governance_api.py  test_health.py  test_phase2_api.py
backend/tests/test_core/: test_events.py
backend/tests/test_evaluation/: test_result_importer.py
backend/tests/test_export/: test_ci_generator.py  test_export_service.py  test_promptfoo_exporter.py
backend/tests/test_governance/: test_activation.py  test_audit.py  test_composition.py  test_cross_mapping.py  test_custom_framework.py  test_engine.py  test_eu_ai_act.py  test_ingestion.py  test_knowledge_graph.py  test_loader.py  test_query_rewriter.py  test_retrieval.py  test_service.py
backend/tests/test_handoff/: test_manager.py
backend/tests/test_models/: test_base.py  test_governance_wiring.py
backend/tests/test_observability/: test_costs.py  test_dispatcher.py  test_emitters.py  test_handlers.py  test_kill_switches.py  test_sanitization.py
frontend/: Dockerfile  (+5 more)
sdk/: pyproject.toml
sdk/tests/: test_checker.py  test_cli.py
(+378 files in other folders)
